--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "firebase": "^9.20.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
     "react": "^18.2.0",
