dockerized and live push

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,16 @@ version: '3.9'
 services:
   frontend:
     build:
-      context: .
-      dockerfile: Dockerfile-frontend
+      context: ./front-end
+      dockerfile: Dockerfile
     image: epklabs/music-app-frontend
     container_name: music-app-frontend
     ports:
       - '3030:80'
     depends_on:
       - server
+    networks:
+      - mynetwork
 
   server:
     build:
@@ -22,3 +24,8 @@ services:
       - '3001:3001'
     volumes:
       - /mnt/server/db/music:/app/public
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
