update server build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       dockerfile: Dockerfile
     image: epklabs/music-app-server
     container_name: music-app-server
+    volumes:
+      - /mnt/server/db/music:/public
     restart: unless-stopped
     ports:
       - '3001:3001'
