--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "12.0.0-alpha.1",
+    "hls.js": "^1.5.17",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
