--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "12.0.0-alpha.1",
     "hls.js": "^1.5.17",
-    "lucide-react": "^0.456.0",
+    "jotai": "^2.10.3",
+    "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-use-audio-player": "^2.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@total-typescript/ts-reset": "^0.6.1",
+    "@types/node": "^22.9.0",
     "@types/react": "^19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@rc",
     "eslint": "^9.9.0",
