--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "biome check --fix --unsafe",
     "prepare": "husky || true"
   },
   "dependencies": {
@@ -20,36 +20,29 @@
     "hls.js": "^1.5.17",
     "jotai": "^2.10.3",
     "lucide-react": "^0.460.0",
-    "next": "^15.0.4-canary.20",
-    "react": "^19.0.0-rc.1",
-    "react-dom": "^19.0.0-rc.1",
+    "next": "^15.0.4-canary.45",
+    "next-themes": "^0.4.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-use-audio-player": "^2.2.0",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/node": "^22.9.1",
-    "@types/react": "^19.0.0-rc.1",
+    "@types/react": "^19.0.1",
     "@types/react-dom": "npm:types-react-dom@rc",
-    "eslint": "^9.15.0",
-    "eslint-config-next": "15.0.3",
     "husky": "^9.1.7",
     "postcss": "^8.4.49",
-    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2",
+    "wrangler": "^3.93.0"
   },
   "lint-staged": {
-    "*.{ts,tsx,md,mdx}": [
-      "prettier --write \"**/*.{ts,tsx,mdx}\" --cache"
-    ],
-    "*.{ts,tsx,mdx}": [
-      "eslint --fix ."
+    "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
+      "biome check --write --no-errors-on-unmatched"
     ]
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
