--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hls.js": "^1.5.17",
     "jotai": "^2.10.3",
     "lucide-react": "^0.460.0",
+    "mongodb": "^6.13.1",
     "next": "^15.0.4-canary.45",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
